--- a/1.html
+++ b/1.html
@@ -3,6 +3,16 @@
 <head>
   <title>WEB1 - HTML</title>
   <meta charset="utf-8">
+  <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VP8102258H"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-VP8102258H');
+  </script>
 </head>
 
 <body>
